# jakk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  new_probe.yml
.github/workflows/: action-smoke.yml  ci.yml  real-target-smoke.yml  release.yml
docs/: 2026-05-22_smoke-report.md  2026-05-23_ch01-extended-experiment.md  2026-05-23_github-mcp-coverage-run.md  2026-05-23_self-security-audit.md  README.md  depth-of-exposure-methodology.md  example-github-action.yml  mcp-server-distribution-decision.md  roadmap.md  scope-decision.md  system-hardening.md  threat-models.md
docs/context-args/: README.md
docs/ssrf/: README.md
docs/tests/: mcp.auth.invalid_token.md  mcp.auth.no_credential.md  mcp.auth.wrong_prefix.md  mcp.authz.cross_tenant_read.md  mcp.command.secret_file_read.md  mcp.command.shell_marker.md  mcp.path.canary_file_read.md  mcp.path.prefix_bypass.md  mcp.response.directive_passthrough.md  mcp.response.secret_overshare.md  mcp.schema.description_smuggling.md  mcp.sql.error_based.md
examples/: stdio_smoke_server.py
examples/external_targets/: README.md  fetch.sh  targets.yaml
examples/external_targets/breach-to-fix/: README.md
examples/external_targets/ch01-extended/: README.md  server.py
examples/external_targets/playwright-mcp/: Dockerfile  docker-compose.yml
jakk/: __init__.py  applies.py  cli.py  findings.py  library.py  matchers.py  mcp_client.py  scanner.py
tests/unit/: test_jakk_applies.py  test_jakk_arg_kinds.py  test_jakk_authz_scanner.py  test_jakk_cli.py  test_jakk_corroborate.py  test_jakk_library.py  test_jakk_matchers.py  test_jakk_mcp_client.py  test_jakk_resilient_client.py  test_jakk_sarif.py  test_jakk_scanner.py  test_jakk_security.py  test_jakk_sql_and_exclude.py  test_jakk_ssrf.py  test_jakk_stdio_loopback.py
