[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jakk"
version = "0.2.0"
description = "Black-box security scanner for MCP servers — fires curated single-call probes and classifies findings. No LLM in the loop."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Akarsh Gajbhiye" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "security",
  "scanner",
  "appsec",
  "red-team",
  "ssrf",
  "prompt-injection",
  "ai-security",
  "llm-security",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "fastmcp>=2.0",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/akar5h/jakk"
Repository = "https://github.com/akar5h/jakk"
Issues = "https://github.com/akar5h/jakk/issues"
Changelog = "https://github.com/akar5h/jakk/blob/main/CHANGELOG.md"
Documentation = "https://github.com/akar5h/jakk/tree/main/docs"

[project.scripts]
jakk = "jakk.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jakk*"]

[tool.setuptools.package-data]
jakk = ["../library/mcp/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: integration-level tests requiring a live MCP server (docker compose).",
]
